syntax = "proto3";

package calculator;

option java_package="com.proto.greet";
option java_multiple_files = true;


message SumRequest {
	int32 firt_num=1;
	int32 second_num=2;
}

message SumResponse {
	int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
	int64 number = 1;
}

message PrimeNumberDecompositionResponse {
	int64 prime_factor = 1;
}

message ComputeAverageRequest {
	int32 number = 1;

}

message ComputeAverageResponse {
	double average = 1;
}

message FindMaximumRequest {
	int32 number = 1;
}

message FindMaximumResponse {
	int32 result = 1;
}

message SquareRootRequest {
	int32 number = 1;
}
message SquareRootResponse {
	double number_root = 1;
}

service CalculatorService {

    //Unary
	rpc Sum(SumRequest) returns (SumResponse) {};
	
	//Server Streaming
	rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
	
	//client Streaming
	rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
	
	//Bi Di streaming
	rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
	
	//error handling  throw exception if the sent number is negative
	rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};

}